# rust-vue-admin

./: README.md
bxy/: Cargo.toml
bxy/blunka-bpms/: .env  Cargo.toml
bxy/blunka-bpms/config/: config.toml
bxy/blunka-bpms/data/log/: app_log.2025-02-27-10
bxy/blunka-bpms/db/: test.sql
bxy/blunka-bpms/src/: main.rs
bxy/core/: Cargo.toml
bxy/core/src/: lib.rs  run.rs
bxy/core/src/api/: mod.rs  v1.rs
bxy/core/src/api/handlers/: hdr_adtion.rs  hdr_adtion_ex.rs  hdr_app.rs  hdr_app_auth.rs  hdr_col_auth.rs  hdr_datasource.rs  hdr_dict.rs  hdr_dict_data.rs  hdr_dql.rs  hdr_duty.rs  hdr_job.rs  hdr_login_log.rs  hdr_master_detail.rs  hdr_menu.rs  hdr_online.rs  hdr_oper_log.rs  hdr_org.rs  hdr_post.rs  hdr_role.rs  hdr_row_auth.rs  hdr_tree.rs  hdr_user.rs  hdr_user_api.rs  hdr_user_auth.rs  mod.rs
bxy/core/src/api/request/: mod.rs  req.rs  req_adtion.rs  req_app.rs  req_col_auth.rs  req_datasource.rs  req_dict.rs  req_dql.rs  req_duty.rs  req_log.rs  req_login.rs  req_master_detail.rs  req_menu.rs  req_online.rs  req_org.rs  req_post.rs  req_role.rs  req_row_auth.rs  req_tree.rs  req_update_log.rs  req_user.rs
bxy/core/src/api/response/: mod.rs  res.rs  res_adtion.rs  res_app.rs  res_col_auth.rs  res_dict.rs  res_menu.rs  res_row_auth.rs  res_tree.rs  res_user.rs
bxy/core/src/api/route/: mod.rs
bxy/core/src/commonds/: migration.rs
bxy/core/src/config/: configs.rs  get_config.rs  mod.rs
bxy/core/src/db/: mod.rs
bxy/core/src/middlewarer/: auth.rs  cache.rs  cache_skytable.rs  ctx.rs  mod.rs  oper_log.rs
bxy/core/src/model/: app_structs.rs  dict_structs.rs  mod.rs  server_info.rs
bxy/core/src/serve/: mod.rs  srv_adtion.rs  srv_adtion_ex.rs  srv_app.rs  srv_app_auth.rs  srv_col_auth.rs  srv_datasource.rs  srv_dict.rs  srv_dict_data.rs  srv_dql.rs  srv_duty.rs  srv_form_auth.rs  srv_login_log.rs  srv_master_detail.rs  srv_menu.rs  srv_online.rs  srv_oper_log.rs  srv_org.rs  srv_post.rs  srv_role.rs  srv_row_auth.rs  srv_server.rs  srv_tree.rs  srv_update_log.rs  srv_user.rs  srv_user_api.rs  srv_user_auth.rs  srv_user_duty.rs  srv_user_org.rs  srv_user_post.rs  srv_user_role.rs
bxy/core/src/serve/orm/: mod.rs  srv.rs
bxy/core/src/serve/utils/: api_utils.rs  jwt.rs  mod.rs  web_utils.rs
bxy/core/src/state/: mod.rs
bxy/core/src/utils/: bxy_env.rs  cert.rs  encrypt_utils.rs  mod.rs  rand_utils.rs
bxy/core/src/utils/file/: mod.rs
bxy/core/src/utils/secret/: aes.rs  mod.rs  sm2.rs  sm3.rs  sm4.rs
bxy/entity/: Cargo.toml
bxy/entity/src/: lib.rs
bxy/entity/src/bpm/: bpm_re_act.rs  bpm_re_biz.rs  bpm_re_graph.rs  bpm_re_job.rs  bpm_re_link.rs  bpm_re_prcs.rs  bpm_re_proxy.rs  bpm_re_step.rs  bpm_re_trans.rs  bpm_ru_endor.rs  bpm_ru_inst.rs  bpm_ru_sign.rs  bpm_ru_task.rs  mod.rs
bxy/entity/src/bpmn/: bpm_evt_log.rs  bpm_ge_bytearray.rs  bpm_ge_property.rs  bpm_hi_actinst.rs  bpm_hi_attachment.rs  bpm_hi_comment.rs  bpm_hi_detail.rs  bpm_hi_identitylink.rs  bpm_hi_procinst.rs  bpm_hi_taskinst.rs  bpm_hi_varinst.rs  bpm_procdef_info.rs  bpm_re_deployment.rs  bpm_re_model.rs  bpm_re_procdef.rs  bpm_ru_deadletter_job.rs  bpm_ru_event_subscr.rs  bpm_ru_execution.rs  bpm_ru_identitylink.rs  bpm_ru_job.rs  bpm_ru_suspended_job.rs  bpm_ru_task.rs  bpm_ru_timer_job.rs  bpm_ru_variable.rs  mod.rs
bxy/entity/src/core/: mod.rs  sys_adtion.rs  sys_adtion_ex.rs  sys_app.rs  sys_app_auth.rs  sys_col_auth.rs  sys_datasource.rs  sys_dict.rs  sys_dict_data.rs  sys_dql.rs  sys_duty.rs  sys_form_auth.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_master_detail.rs  sys_menu.rs  sys_online.rs  sys_oper_log.rs  sys_org.rs  sys_post.rs  sys_role.rs  sys_row_auth.rs  sys_tree.rs  sys_update_log.rs  sys_user.rs  sys_user_api.rs  sys_user_auth.rs  sys_user_duty.rs  sys_user_org.rs  sys_user_post.rs  sys_user_role.rs
bxy/examples/: README.MD
bxy/migration/: Cargo.toml
bxy/migration/src/: db.rs  lib.rs  m20220101_000001_create_table.rs  main.rs
bxy_vue/: .env  .env.deveopmemt  README.md  components.d.ts  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
bxy_vue/src/: components.d.ts
bxy_vue/src/assets/css/: main.css
bxy_vue/src/components/: BApplicationProvider.vue
bxy_vue/src/components/bpmn/: BpmnModeler.vue
bxy_vue/src/components/bpmn/i18n/: index.ts  translate.ts
bxy_vue/src/components/bpmn/modeler/: index.ts
bxy_vue/src/components/bpmn/stores/: bpmn-store.ts
bxy_vue/src/components/flow/: BFlow.vue
bxy_vue/src/components/flow/demo/: index.ts
bxy_vue/src/components/flow/i18n/: index.ts  language-zh.ts
bxy_vue/src/components/footer/: BFooter.vue
bxy_vue/src/components/header/: BHeader.vue
bxy_vue/src/components/layout/: BLayout.vue  BLayout1.vue  BLayout2.vue  BLayout3.vue
bxy_vue/src/components/modal/: BFlowModal.vue  BFormModal.vue  BModal.vue  types.ts
bxy_vue/src/components/sider/: BSider.vue
bxy_vue/src/components/tab/: BTab.vue  BTabPane.vue
bxy_vue/src/components/table/: BTable.vue
bxy_vue/src/hooks/: FormAction.ts  ScreenFullAction.ts
bxy_vue/src/projects/bpm/: App.vue  index.html  main.ts
bxy_vue/src/projects/bpm/api/: admin.ts  bpm.ts  dev.ts  index.ts
bxy_vue/src/stores/modules/: index.ts
bxy_vue/src/toolkit/: index.ts
bxy_vue/src/toolkit/http/: axios.ts  index.ts
bxy_vue/src/toolkit/storage/: index.ts
bxy_vue/src/toolkit/tools/: array2tree.ts  icon.ts  index.ts  uuid.ts
bxy_vue/src/types/: bpm-types.ts  config-types.ts  contant.ts  http-types.ts  index.ts
bxy_vue/src/types/bpmn-js/: index.d.ts
(+90 files in other folders)
