[package]
name = "byz_migration"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "byz_migration"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }

byz_entity = { path = "../entity" }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-mysql",           # `DATABASE_DRIVER` feature
]
